# maestro

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/release/: output.json
app/src/androidTest/java/ai/moises/maestro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  Constants.h  Maestro.cpp  Maestro.h  Player.h  maestro-bridge.cpp
app/src/main/cpp/audio/: AAssetDataSource.cpp  AAssetDataSource.h  DataSource.cpp  DataSource.h  FFMpegExtractor.cpp  FFMpegExtractor.h
app/src/main/cpp/utils/: logging.h
app/src/main/java/ai/moises/maestro/: MainActivity.kt  Player.kt  PlayerView.kt
app/src/main/res/drawable/: ic_toggle_mute.xml
app/src/main/res/layout/: activity_main.xml  player_lite.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ai/moises/maestro/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
